hydro solutions -> hydro sciences

--- a/hydro.html
+++ b/hydro.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Hydro | BioTherm Solutions</title>
+	<title>Hydro Sciences | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h1><img src="img/biotherm-hydro.png" style="width:80px;"> <b>Hydro</b> Solutions</h1>
+				<h1><img src="img/biotherm-hydro.png" style="width:80px;"> <b>Hydro</b> Sciences</h1>
 				<h3>Innovative Irrigation Systems for Greenhouses</h3>
 				<h4>Since 1998, BioTherm has been at the forefront of subirrigation systems.</h4>
 			</div>
