--- a/hydro.html
+++ b/hydro.html
@@ -49,7 +49,7 @@
 				<h4>Since 1998, BioTherm has been at the forefront of subirrigation systems.</h4>
 			</div>
 		</div>
-		<div class="row header-image-credit">
+		<!--<div class="row header-image-credit">
 			<div class="col-md-4 offset-md-8 text-right">
 				<p>
 					Flood Floor Irrigation: <b>The Project Name</b><br />
@@ -57,7 +57,7 @@
 					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
 				</p>
 			</div>
-		</div>
+		</div>-->
 	</div>
 </div>
 
