--- a/index-2.html
+++ b/index-2.html
@@ -42,8 +42,8 @@
 				</li>
 				<li class="nav-item"><a class="nav-link" href="about.html"><i class="fas fa-users"></i> About</a></li>
 				<li class="nav-item"><a class="nav-link" href="contact.html"><i class="far fa-envelope"></i> Contact</a></li>
-				<li class="nav-item"><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
-				<li class="nav-item"><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
+				<li class="nav-item"><a class="nav-link nav-link-icon" href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram" style="margin-left: 20px"><i class="fab fa-instagram"></i></a></li>
+				<li class="nav-item"><a class="nav-link nav-link-icon" href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
 			</ul>
 		</div>
 	</div>
@@ -83,7 +83,7 @@
 									<h4 class="card-title">Climate Systems</h4>
 									<ul class="product-card-list">
 											<li>Heating - Cooling</li>
-											<li>Dehu - CO<sub>2</sub></li>
+											<li>Dehumidification - CO<sub>2</sub></li>
 									</ul>
 									<a href="heat.html"><button type="button" class="btn btn-danger"><b>Climate Systems</b></button></a>
 									</div>
