--- a/tech.html
+++ b/tech.html
@@ -46,11 +46,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h2><img class="img" src="img/biotherm-tech.png" style="width:80px;"/><b>Tech</b>nology Solutions</h2>
+				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Data &amp; Automation</h1>
 				<h4>Biotherm creates innovative technology solutions for commerical plant growers.</h4>
 			</div>
 		</div>
-		<div class="row header-image-credit">
+		<!--<div class="row header-image-credit">
 			<div class="col-md-4 offset-md-8 text-right">
 				<p>
 					Flood Floor Irrigation: <b>The Project Name</b><br />
@@ -58,7 +58,7 @@
 					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
 				</p>
 			</div>
-		</div>
+		</div>-->
 	</div>
 </div>
 
@@ -90,13 +90,13 @@ any device. It is all about the data. Your plants are trying to tell you somethi
 						<div class="tab-content text-center">
 							<div class="tab-pane active" id="Hydra">
 								<p> The Mantis&trade; will open up an entirely new view into the health of your plants.  Measure and record Real-time PH, EC, ORP, Dissolved Oxygen and temperature readings All readings are available via a local web interface on any device. </p>
-								<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>
+								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
 							</div>
 							<div class="tab-pane" id="Commander">
-								<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>
+								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
 							</div>
 							<div class="tab-pane" id="Roots">
-								<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>
+								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
 							</div>
 						</div>
 					</div>
