heat -> climate systems

--- a/heat.html
+++ b/heat.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
-	<title>Heat | BioTherm Solutions</title>
+	<title>Climate Systems | BioTherm Solutions</title>
 </head>
 
 <body>
@@ -48,12 +48,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<h1><img src="img/biotherm-heat.png" style="width:80px;"> <b>Heat</b>ing Solutions</h1>
+				<h1><img src="img/biotherm-heat.png" style="width:80px;"> <b>Climate</b> Systems</h1>
 				<h3>Efficient Greenhouse Heating</h3>
 				<h4>BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h4>
 			</div>
 		</div>
-		<div class="row header-image-credit">
+		<!--<div class="row header-image-credit">
 			<div class="col-md-4 offset-md-8 text-right">
 				<p>
 					Flood Floor Irrigation: <b>The Project Name</b><br />
@@ -61,7 +61,7 @@
 					<a href="project.html">( whitepaper <i class="fas fa-external-link-alt"></i>)</a>
 				</p>
 			</div>
-		</div>
+		</div>-->
 	</div>
 </div>
 
