division titles footer

--- a/heat-applications.html
+++ b/heat-applications.html
@@ -85,9 +85,9 @@
 		<div class="col-md-3">
          <h5>Product</h5>
 			<ul class="links-vertical">
-				<li><a href="heat.html">Heat</a></li>
-				<li><a href="hydro.html">Hydro</a></li>
-				<li><a href="tech.html">Tech</a></li>
+				<li><a href="heat.html">Climate Systems</a></li>
+				<li><a href="hydro.html">Hydro Sciences</a></li>
+				<li><a href="tech.html">Data &amp; Automation</a></li>
 			</ul>
 		</div>
 		<div class="col-md-3">
