below slider nav

--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 		
 
 	
-	<div class="container">
+	<!--<div class="container">
 		<div class="section text-center">
-			<!-- <div class="row">
+			<div class="row">
 				<div class="col-md-8 ml-auto mr-auto">
 					<h2>Solutions</h2>
 				</div>
-			</div> -->
+			</div>
 			<div class="features">
 				<div class="col-md-8 ml-auto mr-auto text-center">
 					<div class="row">
@@ -202,7 +202,33 @@
 			</div>
 		</div>
 		<hr>
-	</div>
+	</div>-->
+		
+	<div class="container section">
+		<div class="row justify-content-md-center text-center">
+			<div class="col">
+				<img src="img/front-temp.png" width="100px">
+				<h4>Our Climate Solutions</h4>
+			</div>
+			<div class="col">
+				<img src="img/front-o2.png" width="100px">
+				<h4>Boost plant growth using pure oxygen</h4>
+			</div>
+			<div class="col">
+				<img src="img/front-plant-circuit.png" width="100px">
+				<h4>Knowledge is power</h4>
+			</div>
+			<div class="col">
+				<img src="img/front-cart.png" width="100px">
+				<h4>Visit our store</h4>
+			</div>
+			<div class="col">
+				<img src="img/front-reseller.png" width="100px">
+				<h4>Reseller opportunities</h4>
+			</div>
+		</div>	
+	</div>	
+		
 
 <!--     *********     BLOG       *********      -->
 	<div id="blog" class="section blog">
