--- a/index.html
+++ b/index.html
@@ -68,6 +68,30 @@
 	<!-- Slide Zero -->
 	<div class="main-carousel-item carousel-item active carousel-background" style="background:#000;">
 		<div class="carousel-caption d-none d-md-block">
+			<h1><span class="animated fadeInDownBig"><b>Efficient Greenhouse Heating</b></span></h1>
+			<h3 class="animated fadeInUp">BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h3>
+		</div>
+		<img src="img/slide-1.png" width="100%" style="margin-top:150px;">
+	</div>
+	<!-- Slide Zero -->
+	<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/slide-2.png')">
+		<div class="carousel-caption d-none d-md-block">
+			<h1><span class="animated fadeInDownBig"><b>Solutions</b></span></h1>
+			<h3 class="animated fadeInUp">Agriculture, flowers, vegetables, vines, institutional, medical cannabis, research... Each greenhouse heating system is tailored to specific climate and growing conditions.</h3>
+			<h2></h2>
+		</div>
+	</div>
+	<!-- Slide Zero -->
+	<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/slide-3.png')">
+	
+		<div class="carousel-caption d-none d-md-block">
+			<h1><span class="animated fadeInDownBig">Solutions</span></h1>
+			<h3 class="animated fadeInUp">Our innovative energy-saving technology is designed to meet the individual needs of even the most demanding projects.</h3>
+		</div>
+	</div>
+	<!-- Slide Zero -->
+	<div class="main-carousel-item carousel-item carousel-background" style="background:#000;">
+		<div class="carousel-caption d-none d-md-block">
 			<h1><span class="animated fadeInDownBig">Solutions</span></h1>
 			<h3 class="animated fadeInUp">Our innovative energy-saving technology is designed to meet the individual needs of even the most demanding projects.</h3>
 			<h2></h2>
@@ -77,7 +101,7 @@
 	<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/project_north_creek_nursery.jpg')">
 		<div class="carousel-caption d-none d-md-block">
 			<h2 class="animated fadeInDown">Improving Turns and Planning for the Future</h2>
-			<h3 class="animated fadeIn">a way to turn more crops over each spring and expand the capacity of their growing operations.</h3>
+			<h3 class="animated fadeIn">A way to turn more crops over each spring and expand the capacity of their growing operations.</h3>
 		</div>
 	</div>
 	<!-- Slide Two  -->
@@ -207,16 +231,31 @@
 	<div class="container section">
 		<div class="row justify-content-md-center text-center">
 			<div class="col">
-				<img src="img/front-temp.png" width="100px">
+				<a data-toggle="collapse" href="#climate" role="button" aria-expanded="false" aria-controls="climate"><img src="img/front-temp.png" width="100px"></a>
 				<h4>Our Climate Solutions</h4>
+				<div class="collapse" id="climate">
+					<a href="heat.html">Heating</a><br />
+					<a href="heat.html">Cooling</a><br />
+					<a href="heat.html">Dehumidification</a><br />
+					<a href="heat.html">CO2</a>
+				</div>
 			</div>
 			<div class="col">
-				<img src="img/front-o2.png" width="100px">
+				<a data-toggle="collapse" href="#hydro" role="button" aria-expanded="false" aria-controls="hydro"><img src="img/front-o2.png" width="100px"></a>
 				<h4>Boost plant growth using pure oxygen</h4>
+				<div class="collapse" id="hydro">
+					<a href="hydro-toob.html">The Toob</a><br />
+					<a href="heat.html">Commerical Solutions</a><br />
+				</div>
 			</div>
 			<div class="col">
-				<img src="img/front-plant-circuit.png" width="100px">
+				<a data-toggle="collapse" href="#data" role="button" aria-expanded="false" aria-controls="data"><img src="img/front-plant-circuit.png" width="100px"></a>
 				<h4>Knowledge is power</h4>
+				<div class="collapse" id="data">
+					<a href="tech.html">Data Collection and Visualization</a><br />
+					<a href="tech.html">Nutrient Dosing</a><br />
+					<a href="tech.html">Wireless technologies</a>
+				</div>
 			</div>
 			<div class="col">
 				<img src="img/front-cart.png" width="100px">
