--- a/index.html
+++ b/index.html
@@ -83,10 +83,9 @@
 	</div>
 	<!-- Slide Zero -->
 	<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/slide-3.png')">
-	
 		<div class="carousel-caption d-none d-md-block">
-			<h1><span class="animated fadeInDownBig">Solutions</span></h1>
-			<h3 class="animated fadeInUp">Our innovative energy-saving technology is designed to meet the individual needs of even the most demanding projects.</h3>
+			<h1><span class="animated fadeInDown">CASE STUDY: Patrick Herzing</span></h1>
+			<h3 class="animated fadeInUp">Michael’s Greenhouse, Cheshire, CT: Improving Turns and Planning for the Future.</h3>
 		</div>
 	</div>
 	<!-- Slide Zero -->
