--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 
 
 
-<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel" data-interval="8000">
+<div id="front-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="8000">
 	<ol class="carousel-indicators">
-		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+		<li data-target="#front-carousel" data-slide-to="0" class="active"></li>
+		<li data-target="#front-carousel" data-slide-to="1"></li>
+		<li data-target="#front-carousel" data-slide-to="2"></li>
+		<li data-target="#front-carousel" data-slide-to="3"></li>
+		<li data-target="#front-carousel" data-slide-to="4"></li>
+		<li data-target="#front-carousel" data-slide-to="5"></li>
+		<li data-target="#front-carousel" data-slide-to="6"></li>
 	</ol>
 	<div class="carousel-inner" role="listbox">
 	<!-- Slide Zero -->
@@ -146,11 +146,11 @@
 		</div>
 	</div>
 </div>
-<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+<a class="carousel-control-prev" href="#front-carousel" role="button" data-slide="prev">
 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 <span class="sr-only">Previous</span>
 </a>
-<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+<a class="carousel-control-next" href="#front-carousel" role="button" data-slide="next">
 <span class="carousel-control-next-icon" aria-hidden="true"></span>
 <span class="sr-only">Next</span>
 </a>
