--- a/index.html
+++ b/index.html
@@ -52,109 +52,12 @@
 	</div>
 </nav>
 
+<div class="page-header header-smallest header-filter" data-parallax="true">
+	<div class="container">
 
-
-<div id="front-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="8000">
-	<ol class="carousel-indicators">
-		<li data-target="#front-carousel" data-slide-to="0" class="active"></li>
-		<li data-target="#front-carousel" data-slide-to="1"></li>
-		<li data-target="#front-carousel" data-slide-to="2"></li>
-		<li data-target="#front-carousel" data-slide-to="3"></li>
-		<li data-target="#front-carousel" data-slide-to="4"></li>
-		<li data-target="#front-carousel" data-slide-to="5"></li>
-		<li data-target="#front-carousel" data-slide-to="6"></li>
-	</ol>
-	<div class="carousel-inner" role="listbox">
-	<!-- Slide Zero -->
-	<div class="main-carousel-item carousel-item active carousel-background" style="background:#000;">
-		<div class="carousel-caption d-none d-md-block">
-			<h1><span class="animated fadeInDownBig"><b>Efficient Greenhouse Heating</b></span></h1>
-			<h3 class="animated fadeInUp">BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h3>
-		</div>
-		<img src="img/slide-1.png" width="100%" style="margin-top:150px;">
-	</div>
-	<!-- Slide Zero -->
-	<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/slide-2.png')">
-		<div class="carousel-caption d-none d-md-block">
-			<h1><span class="animated fadeInDownBig"><b>Solutions</b></span></h1>
-			<h3 class="animated fadeInUp">Agriculture, flowers, vegetables, vines, institutional, medical cannabis, research... Each greenhouse heating system is tailored to specific climate and growing conditions.</h3>
-			<h2></h2>
-		</div>
-	</div>
-	<!-- Slide Zero -->
-	<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/slide-3.png')">
-		<div class="carousel-caption d-none d-md-block">
-			<h1><span class="animated fadeInDown">CASE STUDY: Patrick Herzing</span></h1>
-			<h3 class="animated fadeInUp">Michael’s Greenhouse, Cheshire, CT: Improving Turns and Planning for the Future.</h3>
-		</div>
-	</div>
-	<!-- Slide Zero -->
-	<div class="main-carousel-item carousel-item carousel-background" style="background:#000;">
-		<div class="carousel-caption d-none d-md-block">
-			<h1><span class="animated fadeInDownBig">Solutions</span></h1>
-			<h3 class="animated fadeInUp">Our innovative energy-saving technology is designed to meet the individual needs of even the most demanding projects.</h3>
-			<h2></h2>
-		</div>
-	</div>
-	<!-- Slide One -->
-	<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/project_north_creek_nursery.jpg')">
-		<div class="carousel-caption d-none d-md-block">
-			<h2 class="animated fadeInDown">Improving Turns and Planning for the Future</h2>
-			<h3 class="animated fadeIn">A way to turn more crops over each spring and expand the capacity of their growing operations.</h3>
-		</div>
-	</div>
-	<!-- Slide Two  -->
-	<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/tech.jpg')">
-		<div class="carousel-caption d-none d-md-block">
-			<h2 class="animated fadeInUp">Know your DO?</h2>
-			<p>Heating - Cooling - Dehumidification - CO2</p>
-		</div>
-	</div>
-	<!-- Slide Three  -->
-	<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background-image: url('img/heat.jpg')">
-		<div class="carousel-caption d-none d-md-block">
-			<h3>Boost plant growth using pure oxygen</h3>
-			<p>(flat image with oxygen molecules – bubbles - water) -	The Toob</p>
-		</div>
-	</div>
-	<!-- Slide Four -->
-	<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background-image: url('img/KYG_Dashboard.jpg')">
-		<div class="carousel-caption d-none d-md-block">
-			<h3>"Knowledge is power" (flat image with wireless circuitry and plant)</h3>
-			<p>-	Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
-		</div>
-	</div>
-	<!-- Slide Five -->
-	<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background-image: url('img/project_north_creek_nursery.jpg')">
-		<div class="carousel-caption d-none d-md-block">
-			<h3>"Knowledge is power" (flat image with wireless circuitry and plant)</h3>
-			<p>-	Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
-		</div>
-	</div>
-	<!-- Slide Six -->
-	<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background-image: url('img/heat-side.jpg')">
-		<div class="carousel-caption d-none d-md-block">
-			<h3>Controlling Costs and Improving Consistency</h3>
-			<p>-	Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
-		</div>
-	</div>
-	<!-- Slide Seven -->
-	<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background:#000;">
-		<div class="carousel-caption d-none d-md-block">
-			<h3 class="animated slideInUp">Improving Heating Costs and Plant Health</h3>
-			<p>-	Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
-		</div>
 	</div>
 </div>
-<a class="carousel-control-prev" href="#front-carousel" role="button" data-slide="prev">
-<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-<span class="sr-only">Previous</span>
-</a>
-<a class="carousel-control-next" href="#front-carousel" role="button" data-slide="next">
-<span class="carousel-control-next-icon" aria-hidden="true"></span>
-<span class="sr-only">Next</span>
-</a>
-</div>
+
 
 
 
@@ -162,7 +65,109 @@
 
 <div class="main main-raised">
 	
-		
+		<div class="container">
+		<div id="front-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="8000">
+			<ol class="carousel-indicators">
+				<li data-target="#front-carousel" data-slide-to="0" class="active"></li>
+				<li data-target="#front-carousel" data-slide-to="1"></li>
+				<li data-target="#front-carousel" data-slide-to="2"></li>
+				<li data-target="#front-carousel" data-slide-to="3"></li>
+				<li data-target="#front-carousel" data-slide-to="4"></li>
+				<li data-target="#front-carousel" data-slide-to="5"></li>
+				<li data-target="#front-carousel" data-slide-to="6"></li>
+			</ol>
+			<div class="carousel-inner" role="listbox">
+			<!-- Slide Zero -->
+			<div class="main-carousel-item carousel-item active carousel-background" style="">
+				<div class="carousel-caption d-none d-md-block">
+					<h1><span class="animated fadeInDownBig"><b>Efficient Greenhouse Heating</b></span></h1>
+					<h3 class="animated fadeInUp">BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h3>
+				</div>
+				<img src="img/slide-1.png" width="100%" style="margin-top:150px;">
+			</div>
+			<!-- Slide Zero -->
+			<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/slide-2.png')">
+				<div class="carousel-caption d-none d-md-block">
+					<h1><span class="animated fadeInDownBig"><b>Solutions</b></span></h1>
+					<h3 class="animated fadeInUp">Agriculture, flowers, vegetables, vines, institutional, medical cannabis, research... Each greenhouse heating system is tailored to specific climate and growing conditions.</h3>
+					<h2></h2>
+				</div>
+			</div>
+			<!-- Slide Zero -->
+			<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/slide-3.png')">
+				<div class="carousel-caption d-none d-md-block">
+					<h1><span class="animated fadeInDown">CASE STUDY: Patrick Herzing</span></h1>
+					<h3 class="animated fadeInUp">Michael’s Greenhouse, Cheshire, CT: Improving Turns and Planning for the Future.</h3>
+				</div>
+			</div>
+			<!-- Slide Zero -->
+			<div class="main-carousel-item carousel-item carousel-background" style="background:#000;">
+				<div class="carousel-caption d-none d-md-block">
+					<h1><span class="animated fadeInDownBig">Solutions</span></h1>
+					<h3 class="animated fadeInUp">Our innovative energy-saving technology is designed to meet the individual needs of even the most demanding projects.</h3>
+					<h2></h2>
+				</div>
+			</div>
+			<!-- Slide One -->
+			<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/project_north_creek_nursery.jpg')">
+				<div class="carousel-caption d-none d-md-block">
+					<h2 class="animated fadeInDown">Improving Turns and Planning for the Future</h2>
+					<h3 class="animated fadeIn">A way to turn more crops over each spring and expand the capacity of their growing operations.</h3>
+				</div>
+			</div>
+			<!-- Slide Two  -->
+			<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/tech.jpg')">
+				<div class="carousel-caption d-none d-md-block">
+					<h2 class="animated fadeInUp">Know your DO?</h2>
+					<p>Heating - Cooling - Dehumidification - CO2</p>
+				</div>
+			</div>
+			<!-- Slide Three  -->
+			<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background-image: url('img/heat.jpg')">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>Boost plant growth using pure oxygen</h3>
+					<p>(flat image with oxygen molecules – bubbles - water) -	The Toob</p>
+				</div>
+			</div>
+			<!-- Slide Four -->
+			<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background-image: url('img/KYG_Dashboard.jpg')">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>"Knowledge is power" (flat image with wireless circuitry and plant)</h3>
+					<p>-	Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
+				</div>
+			</div>
+			<!-- Slide Five -->
+			<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background-image: url('img/project_north_creek_nursery.jpg')">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>"Knowledge is power" (flat image with wireless circuitry and plant)</h3>
+					<p>-	Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
+				</div>
+			</div>
+			<!-- Slide Six -->
+			<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background-image: url('img/heat-side.jpg')">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>Controlling Costs and Improving Consistency</h3>
+					<p>-	Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
+				</div>
+			</div>
+			<!-- Slide Seven -->
+			<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background:#000;">
+				<div class="carousel-caption d-none d-md-block">
+					<h3 class="animated slideInUp">Improving Heating Costs and Plant Health</h3>
+					<p>-	Data Collection and Visualization -	Nutrient Dosing -	Wireless technologies</p>
+				</div>
+			</div>
+		</div>
+		<a class="carousel-control-prev" href="#front-carousel" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#front-carousel" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+		</a>
+		</div>
+		</div>
 
 	
 	<!--<div class="container">
