slider up front

--- a/index.html
+++ b/index.html
@@ -78,7 +78,21 @@
 			</ol>
 			<div class="carousel-inner" role="listbox">
 			<!-- Slide Zero -->
-			<div class="main-carousel-item carousel-item active carousel-background" style="">
+			<div class="main-carousel-item carousel-item active carousel-background" style="background-image: url('img/slide-3.png')">
+				<div class="row justify-content-md-center text-center">
+					<div class="col">
+					</div>
+					<div class="col">
+						<div class="carousel-caption d-none d-md-block">
+							<h1><span class="animated fadeInDown">Improving Turns and Planning for the Future.</span></h1>
+							<h3 class="animated fadeInUp">CASE STUDY: Patrick Herzing - Michael’s Greenhouse, Cheshire, CT: </h3>
+						</div>
+					</div>
+				</div>
+				
+			</div>
+			<!-- Slide Zero -->
+			<div class="main-carousel-item carousel-item carousel-background" style="color:#000;">
 				<div class="carousel-caption d-none d-md-block">
 					<h1><span class="animated fadeInDownBig"><b>Efficient Greenhouse Heating</b></span></h1>
 					<h3 class="animated fadeInUp">BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h3>
@@ -93,13 +107,7 @@
 					<h2></h2>
 				</div>
 			</div>
-			<!-- Slide Zero -->
-			<div class="main-carousel-item carousel-item carousel-background" style="background-image: url('img/slide-3.png')">
-				<div class="carousel-caption d-none d-md-block">
-					<h1><span class="animated fadeInDown">CASE STUDY: Patrick Herzing</span></h1>
-					<h3 class="animated fadeInUp">Michael’s Greenhouse, Cheshire, CT: Improving Turns and Planning for the Future.</h3>
-				</div>
-			</div>
+
 			<!-- Slide Zero -->
 			<div class="main-carousel-item carousel-item carousel-background" style="background:#000;">
 				<div class="carousel-caption d-none d-md-block">
@@ -274,7 +282,7 @@
 		
 
 <!--     *********     BLOG       *********      -->
-	<div id="blog" class="section blog">
+	<!--<div id="blog" class="section blog">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 ml-auto mr-auto">
@@ -332,12 +340,21 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 <!--     *********    END BLOG       *********      -->  
 
 <!--     *********    SIGNUP     *********      -->
 	<div class="" data-parallax="true" style="background:#555">
-		<div class="container section" >
+		<div class="container section">
+			<div class="row justify-content-md-center">
+				<div class="col col-lg-4">
+					<img class="img-fluid" src="img/brochure.jpg">
+				</div>
+				<div class="col col-lg-4">
+					<img class="img-fluid" src="img/brochure2.jpg">
+				</div>
+			</div>
+			<br />
 			<div class="row">
 				<div class="col-md-8 ml-auto mr-auto text-center">
 					<h3 class="title" style="color:#fff;"> Newsletter</h3>
