--- a/index.html
+++ b/index.html
@@ -353,6 +353,9 @@
 				<div class="col col-lg-4">
 					<img class="img-fluid" src="img/brochure2.jpg">
 				</div>
+				<div class="col col-lg-4">
+					<h4 style="color:#fff;">placeholder for proposal questionnaire doc</h4>
+				</div>
 			</div>
 			<br />
 			<div class="row">
