case study slide

--- a/index.html
+++ b/index.html
@@ -78,14 +78,17 @@
 			</ol>
 			<div class="carousel-inner" role="listbox">
 			<!-- Slide Zero -->
-			<div class="main-carousel-item carousel-item active carousel-background" style="background-image: url('img/slide-3.png')">
+			<div class="main-carousel-item carousel-item active carousel-background" style="">
 				<div class="row justify-content-md-center text-center">
-					<div class="col">
+					<div class="col col-lg-4">
+						<img src="img/slide-3.jpg">
 					</div>
 					<div class="col">
 						<div class="carousel-caption d-none d-md-block">
-							<h1><span class="animated fadeInDown">Improving Turns and Planning for the Future.</span></h1>
-							<h3 class="animated fadeInUp">CASE STUDY: Patrick Herzing - Michael’s Greenhouse, Cheshire, CT: </h3>
+							<br />
+							<h2 style="color:#000"><span class="animated fadeInDown"><b>Improving Turns and Planning for the Future.</b></span></h2>
+							<h3 style="color:#000" class="animated fadeInUp">Patrick Herzing - Michael’s Greenhouse, Cheshire, CT</h3>
+							<p><a href="case-micheals.html"><button type="button" class="btn btn-hydro">Case Study</button></a></p>
 						</div>
 					</div>
 				</div>
@@ -93,7 +96,7 @@
 			</div>
 			<!-- Slide Zero -->
 			<div class="main-carousel-item carousel-item carousel-background" style="color:#000;">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-none d-md-block" style="color:#000;">
 					<h1><span class="animated fadeInDownBig"><b>Efficient Greenhouse Heating</b></span></h1>
 					<h3 class="animated fadeInUp">BioTherm has been at the forefront of developing highly efficient heating solutions for rugged environments since 1980.</h3>
 				</div>
@@ -355,6 +358,7 @@
 				</div>
 				<div class="col col-lg-4">
 					<h4 style="color:#fff;">placeholder for proposal questionnaire doc</h4>
+					<img class="img-fluid" src="img/brochure2.jpg">
 				</div>
 			</div>
 			<br />
