--- a/heat-applications-ground-frost.html
+++ b/heat-applications-ground-frost.html
@@ -34,7 +34,7 @@
 					</div>
 				</li>
 				<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-				<li class="nav-item"><a class="nav-link" href="contact.html"><i class="far fa-envelope"></i> Contact</a></li>
+				<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 				<li class="nav-item"><a class="nav-link nav-link-icon" href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram" style="margin-left: 20px;margin-right:-10px;"><i class="fab fa-instagram"></i></a></li>
 				<li class="nav-item"><a class="nav-link nav-link-icon" href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
 			</ul>
