--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 			<h2><span class="animated fadeInDownBig">BioTherm has been at the forefront of developing highly efficient greenhouse solutions since 1980.</span></h2>
 			<br />
 		</div>
-		<img src="img/slide-1.png" width="100%" style="margin-top:100px;">
+		<!--<img src="img/slide-1.png" width="100%" style="margin-top:100px;">-->
 	</div>
 	
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-background" style="background:#ed1c24;">
-		<div class="carousel-caption d-md-block" style="background:url('img/front-climate-white.png') left no-repeat;">
-			<h2 class="front-title"><span class="animated fadeInDownBig">Climate Systems</span></h2>
+		<div class="carousel-caption d-md-block">
+			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-climate-white-full.png" width=50px style="margin:0 0 0 -55px"/> <b>Climate Systems</b></span></h2>
 			<h3 class="front-title animated fadeInUp">Heating, Cooling, Dehumidification &amp; CO<sub>2</sub></h3>
 			<p><span class="animated fadeInDownBig"><a href="heat.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
 		</div>
@@ -84,8 +84,8 @@
 
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-background" style="background:#1c8bed;">
-		<div class="carousel-caption d-md-block" style="background:url('img/front-hydro-white.png') left no-repeat;">
-			<h2><span class="animated fadeInDownBig">Hydro Sciences</span></h2>
+		<div class="carousel-caption d-md-block">
+			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-hydro-white-full.png" width=50px style="margin:0 0 0 -55px"/> Hydro Sciences</span></h2>
 			<h3 class="animated fadeInUp">Oxygen Infusion, Flood Floors, &amp; Nutrient Dosing</h3>
 			<p><span class="animated fadeInDownBig"><a href="hydro.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
 		</div>
@@ -102,8 +102,8 @@
 	
 	<!-- Slide -->
 	<div class="main-carousel-item carousel-item carousel-filter carousel-background" style="background:#16c462;">
-		<div class="carousel-caption d-md-block" style="background:url('img/front-tech-white.png') left no-repeat;">
-			<h2><span class="animated fadeInDownBig">Data &amp; Automation</span></h2>
+		<div class="carousel-caption d-md-block">
+			<h2 class="front-title"><span class="animated fadeInDownBig"><img src="img/front-tech-white-full.png" width=50px style="margin:0 0 0 -55px"/> Data &amp; Automation</span></h2>
 			<h3 class="animated fadeInUp">Data Visualization, Controls, &amp;	Wireless technologies</h3>
 			<p><span class="animated fadeInDownBig"><a href="tech.html"><button type="button" class="btn btn-secondary"><b>Solutions</b></button></a></span></p>
 		</div>
